feat: Atualizar a configuração de segurança, adicionar endpoints de autenticação e gestão de contas, e implementar tratamento de exceções